--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,10 +1,30 @@
-footer {
-  display: flex;
-  gap: 24px;
-  padding-block: 24px;
-  font: 14px/150% var(--font-family);
+@media (width >=80em) {
+  footer {
+    display: flex;
+    gap: 1.5rem;
+    padding-block: 1.5rem;
+    font: 14px/150% var(--font-family);
+    padding-inline: 2rem;
+  }
+
+  footer p {
+    margin-right: auto;
+  }
 }
 
-footer span:nth-child(1) {
-  margin-right: auto;
+@media (width < 80em) {
+  & footer {
+    font: 14px/150% var(--font-family);
+    text-align: center;
+    margin: 1rem;
+  }
+
+  & footer p {
+    margin-bottom: 1rem;
+  }
+
+  & footer span {
+    padding: .5rem;
+  }
+
 }
