--- a/styles/global.css
+++ b/styles/global.css
@@ -18,9 +18,15 @@
   --text: 16px/1.5 var(--font-family);
   --text-md: 14px/170% var(--font-family);
   --text-sm: 12px/170% var(--font-family);
+
+
 }
 
-body{
+html {
+  overflow-x: hidden;
+}
+
+body {
   font: var(--text);
   color: var(--text-color-secondary);
   background-color: var(--background-color);
@@ -28,7 +34,8 @@ body{
 
 a {
   text-decoration: none;
-  color: inherit; /*para herdar do body */
+  color: inherit;
+  /*para herdar do body */
 }
 
 a:hover {
@@ -36,12 +43,33 @@ a:hover {
   text-decoration: underline;
 }
 
-.container { /* para todo o projeto vai aplicar */
-   padding-inline: 32px; /* se colocar 1 valor aplica p 2 lados */
-   max-width: 1280px;
-   margin-inline: auto; /* só aplica para as laterias */
-}
-
 .bg-surface-color {
   background-color: var(--surface-color);
+}
+
+header .container {
+  /* para todo o projeto vai aplicar */
+  padding-inline: 2rem;
+  /* se colocar 1 valor aplica p 2 lados */
+  max-width: 80rem;
+  margin-inline: auto;
+  /* só aplica para as laterias */
+}
+
+nav {
+  padding-inline: 2rem;
+}
+
+main {
+  padding-inline: 2rem;
+}
+
+@media (width < 80em) {
+  & nav {
+  padding-inline: 1rem;
+  }
+
+  & main {
+    padding-inline: 1.5rem;
+  }
 }
