--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,19 @@
 main {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
-  padding-block: 24px;
+  gap: 1.5rem;
+  padding-block: 1.5rem;
 }
 
 main img {
-  width: 286px;
-  height: 286px;
+  width: 17.875rem;
+  height: 17.875rem;
   object-fit: cover;
+}
+
+@media (width < 80em) {
+  & main img {
+    width: 20.5rem;
+    height: 20.5rem;
+  }
 }
